traefik/traefik-router.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: service-routes
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/course-management`)
      kind: Rule
      services:
        - name: course
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/user-management`)
      kind: Rule
      services:
        - name: user
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/authentication-management`)
      kind: Rule
      services:
        - name: authentication
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/matriculation-management`)
      kind: Rule
      services:
        - name: matriculation
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/certificate-management`)
      kind: Rule
      services:
        - name: certificate
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/configuration-management`)
      kind: Rule
      services:
        - name: configuration
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/examreg-management`)
      kind: Rule
      services:
        - name: examreg
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/report-management`)
      kind: Rule
      services:
        - name: report
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/admission-management`)
      kind: Rule
      services:
        - name: admission
          namespace: uc4-lagom
          port: 80
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          namespace: kubernetes-dashboard
          port: 443
